--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ricardo Hofstetter Dias - Desenvolvedor Frontend</title>
+  <title>Francisca Costa - Desenvolvedora Frontend</title>
 
   <link rel="stylesheet" href="src/css/font-awesome.css" />
   <link rel="stylesheet" href="src/css/reset.css" />
@@ -53,8 +53,8 @@
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
           <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
-          <h2>Desenvolvedor Frontend</h2>
+          <h1>Sou o Francisca Costa</h1>
+          <h2>Desenvolvedora Frontend</h2>
 
           <div class="redes-sociais">
             <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
@@ -66,7 +66,7 @@
 
         <div class="img-home">
           <div class="img-box inner-shadow">
-            <img class="outer-shadow" src="src/imagens/foto-perfil.png" alt="foto do perfil do Ricardo" />
+            <img class="outer-shadow" src="src/imagens/Img2.png" alt="foto do perfil da Francisca" />
           </div>
         </div>
       </div>
@@ -87,17 +87,17 @@
         </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me chamo Ricardo Dias e sou um desenvolvedor frontend em
+            <strong>Olá! Me chamo Francisca Costa e sou uma desenvolvedora frontend em
               formação!</strong>
               Gosto MUITO da área de tecnologia, e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
           <p>
-           Estou sempre me desafiando coim novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
+           Estou sempre me desafiando com novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
           </p>
 
           <p>
-            Ah, gosto de jogos, filmes, séries, animes e outras nerdices. 💜
+            Ah, gosto de praticar atividades física como musculação, música. 💜
           </p>
 
           <div class="botoes">
