--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
           <p>Olá 🖖,</p>
-          <h1>Sou o Francisca Costa</h1>
+          <h1>Sou a Francisca Costa</h1>
           <h2>Desenvolvedora Frontend</h2>
 
           <div class="redes-sociais">
@@ -87,9 +87,8 @@
         </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me chamo Francisca Costa e sou uma desenvolvedora frontend em
-              formação!</strong>
-              Gosto MUITO da área de tecnologia, e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
+            <strong>Olá! Me Chamo Francisca Costa e sou uma desenvolvedora frontend em formação!</strong>
+              Gosto MUITO da área de tecnologia e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
           <p>
@@ -97,7 +96,7 @@
           </p>
 
           <p>
-            Ah, gosto de praticar atividades física como musculação, música. 💜
+            Ah, gosto de praticar atividades física como musculação e corrida. 💜
           </p>
 
           <div class="botoes">
