--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row justify-content-between alinhar-itens-no-centro">
         <a href="#">
-          <h1 class="logo">RD</h1>
+          <h1 class="logo">FC</h1>
         </a>
         <nav>
           <input id="menu-hamburguer" type="checkbox" />
@@ -41,7 +41,7 @@
           <ul>
             <li><a href="#sobre-mim">Sobre mim</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#projetos">Meus projetos</a></li>
+            <li><a href="#projetos">Meus Projetos</a></li>
           </ul>
         </nav>
       </div>
