--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me Chamo Francisca Costa e sou uma desenvolvedora frontend em formação!</strong>
+            <strong>Olá! Me Chamo Francisca Costa e sou uma desenvolvedora Frontend em formação!</strong>
               Gosto MUITO da área de tecnologia e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
