--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       </div>
     </div>
   </section>
+  
   <section class="sobre-mim section" id="sobre-mim">
     <div class="container">
       <div class="row">
@@ -82,15 +83,17 @@
           <h2>Sobre mim</h2>
         </div>
       </div>
+      
       <div class="row">
         <div class="imagem-sobre-mim">
           <div class="img-box inner-shadow">
-            <img src="src/imagens/foto-perfil.png" alt="foto sobre mim" class="outer-shadow" />
+            <img src="src/imagens/Img2.png" alt="foto sobre mim" class="outer-shadow" />
           </div>
         </div>
+        
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me Chamo Francisca Costa e sou uma desenvolvedora Frontend em formação!</strong>
+            <strong>Olá! Me Chamo Francisca Costa e sou uma Desenvolvedora Frontend em formação!</strong>
               Gosto MUITO da área de tecnologia e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
@@ -103,7 +106,7 @@
           </p>
 
           <div class="botoes">
-            <a target="_blank" href="/src/arquivos/cv.pdf" class="botao outer-shadow">Veja meu CV</a>
+            <a target="_blank" href="/src/arquivos/Fran-cv.pdf" class="botao outer-shadow">Veja meu CV</a>
           </div>
         </div>
       </div>
