add link continuacao

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
 
         <div class="projeto">        
-          <a href="https://github.com">
+          <a target="_blank" href="https://github.com">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 2</h3>
             <div class="informacoes-projeto">          
@@ -211,7 +211,7 @@
         </div>
 
         <div class="projeto">     
-          <a href="https://github.com">
+          <a target="_blank" href="https://github.com">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 3</h3>
             <div class="informacoes-projeto">
@@ -222,7 +222,7 @@
         </div>
 
         <div class="projeto">
-          <a href="https://github.com">
+          <a target="_blank" href="https://github.com">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 4</h3>
             <div class="informacoes-projeto">
