--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -101,7 +101,7 @@
           </p>
 
           <div class="botoes">
-            <a target="_blank" href="/src/arquivos/Fran-cv.pdf" class="botao outer-shadow">Veja meu CV</a>
+            <a target="_blank" href="/portfolio-main/src/arquivos/Currículo - Fran.C.pdf" class="botao outer-shadow">Veja meu CV</a>
           </div>
         </div>
       </div>
