--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -89,7 +89,7 @@
         <div class="informacoes-sobre-mim">
           <p>
             <strong>Olá! Me Chamo Francisca Costa e sou uma Desenvolvedora Frontend em formação!</strong>
-              Gosto muito da área de tecnologia e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
+            <p>Gosto muito da área de tecnologia e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.</p>
           </p>
 
           <p>
